--- a/participant-microservice.yml
+++ b/participant-microservice.yml
@@ -1,4 +1,4 @@
-message: Greetings from the PARTICIPANT microservice [using the PRODUCTION config]
+message: Greetings from the PARTICIPANT microservice [using the LOCAL config]
 
 spring:
   data:
