--- a/participant-microservice.yml
+++ b/participant-microservice.yml
@@ -1,4 +1,5 @@
-message: Greetings from the PARTICIPANT microservice [using the LOCAL config]
+config:
+  message: Greetings from the PARTICIPANT microservice [using the LOCAL config]
 
 spring:
   data:
