--- a/eureka-server-microservice.yml
+++ b/eureka-server-microservice.yml
@@ -1,6 +1,11 @@
 config:
   message: Greetings from the EUREKA server microservice [using the BASE config]
-  
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    
 server:
   port: 13303
   context-path: /eurekaServer
