--- a/eureka-server-microservice-local.yml
+++ b/eureka-server-microservice-local.yml
@@ -1,2 +1,11 @@
 config:
   message: Greetings from the EUREKA server microservice [using the LOCAL config]
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
