--- a/eureka-server-microservice.yml
+++ b/eureka-server-microservice.yml
@@ -11,3 +11,6 @@ management:
 eureka:
   dashboard:
     path: eurekaWebUI
+  instance:
+    statusPageUrlPath: ${management.contextPath}/info
+    healthCheckUrlPath: ${management.contextPath}/health
