--- a/eureka-server-microservice.yml
+++ b/eureka-server-microservice.yml
@@ -12,5 +12,6 @@ eureka:
   dashboard:
     path: eurekaWebUI
   instance:
+    preferIpAddress: true
     statusPageUrlPath: ${management.context-path}/info
     healthCheckUrlPath: ${management.context-path}/health
