--- a/eureka-server-microservice.yml
+++ b/eureka-server-microservice.yml
@@ -3,6 +3,7 @@ config:
 
 server:
   port: 13303
+  context-path: /eureka
 
 management:
   port: 13304
@@ -11,7 +12,7 @@ management:
 error:
   whitelabel:
     enabled: false
-      
+
 eureka:
   dashboard:
     path: eurekaWebUI
@@ -19,3 +20,8 @@ eureka:
     preferIpAddress: true
     statusPageUrlPath: ${management.context-path}/info
     healthCheckUrlPath: ${management.context-path}/health
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/${server.context-path}/
