--- a/eureka-server-microservice.yml
+++ b/eureka-server-microservice.yml
@@ -24,4 +24,4 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/${server.context-path}/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}${server.context-path}/
