Enable peer to peer

--- a/eureka-server-microservice.yml
+++ b/eureka-server-microservice.yml
@@ -15,7 +15,7 @@ error:
 
 eureka:
   dashboard:
-    path: eurekaWebUI
+    path: dashboard
   instance:
     preferIpAddress: true
     statusPageUrlPath: ${management.context-path}/info
