--- a/eureka-server-microservice-production2.yml
+++ b/eureka-server-microservice-production2.yml
@@ -4,3 +4,6 @@ config:
 eureka:
   instance:
     hostname: 192.168.1.34
+  client:
+    serviceUrl:
+      defaultZone: http://192.168.1.33:${server.port}${server.context-path}/
