--- a/eureka-server-microservice-production1.yml
+++ b/eureka-server-microservice-production1.yml
@@ -6,4 +6,4 @@ eureka:
     hostname: 192.168.1.33
   client:
     serviceUrl:
-      defaultZone: http://192.168.1.34:${server.port}${server.context-path}/
+      defaultZone: http://${peer2.hostname}:${server.port}${server.context-path}/
