--- a/eureka-server-microservice-test2.yml
+++ b/eureka-server-microservice-test2.yml
@@ -6,4 +6,4 @@ eureka:
     hostname: 192.168.1.34
   client:
     serviceUrl:
-      defaultZone: http://192.168.1.33:${server.port}${server.context-path}/
+      defaultZone: http://${peer1.hostname}:${server.port}${server.context-path}/
