--- a/eureka-server-microservice-production2.yml
+++ b/eureka-server-microservice-production2.yml
@@ -3,7 +3,7 @@ config:
 
 eureka:
   instance:
-    hostname: 192.168.1.34
+    hostname: ${peer2.hostname}
   client:
     serviceUrl:
       defaultZone: http://${peer1.hostname}:${server.port}${server.context-path}/
