--- a/config-eureka-server-microservice/eureka-server-microservice.yml
+++ b/config-eureka-server-microservice/eureka-server-microservice.yml
@@ -7,7 +7,7 @@ server:
 
 management:
   port: 13304
-  context-path: /eureka/manage
+  context-path: ${server.context-path}/manage
 
 error:
   whitelabel:
@@ -15,7 +15,7 @@ error:
 
 eureka:
   dashboard:
-    path: dashboard
+    path: ${server.context-path}/dashboard
   instance:
     preferIpAddress: true
     statusPageUrlPath: ${management.context-path}/info
