--- a/config-eureka-server-microservice/eureka-server-microservice.yml
+++ b/config-eureka-server-microservice/eureka-server-microservice.yml
@@ -14,6 +14,9 @@ error:
     enabled: false
 
 eureka:
+  # defaultZone.context-path is a made up eureka property for reuse
+  defaultZone:
+    context-path: eurekaZone
   dashboard:
     path: dashboard
   instance:
@@ -24,4 +27,4 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}${server.context-path}/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/${eureka.defaultZone.context-path}/
