--- a/config-activities-config-microservice/activities-config-microservice-local.yml
+++ b/config-activities-config-microservice/activities-config-microservice-local.yml
@@ -2,6 +2,8 @@ config:
   message: Greetings from the ACTIVITIES CONFIG microservice [using the LOCAL config]
 
 eureka:
+  instance:
+    hostname: localhost
   client:
     serviceUrl:
       defaultZone: http://localhost:13303/eurekaServer/eureka/
