disable self preservation to see what happens

--- a/config-eureka-server-microservice/eureka-server-microservice.yml
+++ b/config-eureka-server-microservice/eureka-server-microservice.yml
@@ -30,3 +30,5 @@ eureka:
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}${server.context-path}/${eureka.defaultZone.context-path}/
+  server:
+    enable-self-preservation: false
