Moved configuration to correct place

--- a/admin-server-microservice/admin-server-microservice-local.yml
+++ b/admin-server-microservice/admin-server-microservice-local.yml
@@ -1,5 +1,10 @@
 config:
   message: Greetings from the ADMIN SERVER microservice [using the LOCAL config]
-      
+     
+spring:
+  boot:
+    admin:
+      url: http://localhost:13307/adminServer
+       
 instance:
   hostname: localhost
