--- a/activities-config-microservice/activities-config-microservice-test.yml
+++ b/activities-config-microservice/activities-config-microservice-test.yml
@@ -1,3 +1,8 @@
+spring:
+  boot:
+    admin:
+      url: http://192.168.1.33:13307/adminServer,http://192.168.1.34:13307/adminServer
+      
 eureka:
   client:
     serviceUrl:
