--- a/admin-server-microservice/admin-server-microservice-production.yml
+++ b/admin-server-microservice/admin-server-microservice-production.yml
@@ -1,4 +1,4 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://192.168.1.33:13303/eurekaServer/eureka/,http://192.168.1.34:13303/eurekaServer/eureka/
+spring:
+  boot:
+    admin:
+      url: http://192.168.1.33:13307/adminServer,http://192.168.1.34:13307/adminServer
