--- a/eureka-server-microservice/eureka-server-microservice-test.yml
+++ b/eureka-server-microservice/eureka-server-microservice-test.yml
@@ -10,4 +10,4 @@ peer2:
 spring:
   boot:
     admin:
-      url: http://192.168.1.33:13307/adminServer
+      url: http://192.168.1.33:13307/adminServer,http://192.168.1.34:13307/adminServer
