--- a/eureka-server-microservice/eureka-server-microservice.yml
+++ b/eureka-server-microservice/eureka-server-microservice.yml
@@ -5,9 +5,9 @@ spring:
   boot:
     admin:
       client:
-        health-url: http://${instance.hostname}:${management.port}${management.context-path}/health
-        management-url: http://${instance.hostname}:${management.port}${management.context-path}
-        service-url: http://${instance.hostname}:${server.port}${server.context-path}
+        health-url: http://${eureka.instance.hostname}:${management.port}${management.context-path}/health
+        management-url: http://${eureka.instance.hostname}:${management.port}${management.context-path}
+        service-url: http://${eureka.instance.hostname}:${server.port}${server.context-path}
         
 server:
   port: 13303
