--- a/participant-microservice/participant-microservice.yml
+++ b/participant-microservice/participant-microservice.yml
@@ -1,6 +1,14 @@
 config:
   message: Greetings from the PARTICIPANT microservice [using the BASE config]
 
+spring:
+  boot:
+    admin:
+      client:
+        health-url: http://${eureka.instance.hostname}:${management.port}${management.context-path}/health
+        management-url: http://${eureka.instance.hostname}:${management.port}${management.context-path}
+        service-url: http://${eureka.instance.hostname}:${server.port}${server.context-path}
+
 server:
   port: 13305
   context-path: /participant
