--- a/participant-microservice/participant-microservice-production.yml
+++ b/participant-microservice/participant-microservice-production.yml
@@ -1,4 +1,7 @@
 spring:
+  boot:
+    admin:
+      url: http://192.168.1.33:13307/adminServer,http://192.168.1.34:13307/adminServer
   data:
     mongodb:
       host: 192.168.1.32
