--- a/participant-microservice/participant-microservice-local.yml
+++ b/participant-microservice/participant-microservice-local.yml
@@ -6,5 +6,7 @@ spring:
     admin:
       url: http://localhost:13307/adminServer
   data:
+    cassandra:
+      contact-points: 192.168.1.32
     mongodb:
       host: 192.168.1.32
