--- a/participant-microservice/participant-microservice-production.yml
+++ b/participant-microservice/participant-microservice-production.yml
@@ -3,5 +3,7 @@ spring:
     admin:
       url: http://192.168.1.33:13307/adminServer,http://192.168.1.34:13307/adminServer
   data:
+    cassandra:
+      contact-points: 192.168.1.32
     mongodb:
       host: 192.168.1.32
