--- a/participant-microservice/participant-microservice.yml
+++ b/participant-microservice/participant-microservice.yml
@@ -9,6 +9,8 @@ spring:
         management-url: http://${eureka.instance.hostname}:${management.port}${management.context-path}
         service-url: http://${eureka.instance.hostname}:${server.port}${server.context-path}
   data:
+    cassandra:
+      keyspace-name: participant
     mongodb:
       database: activitiesDB
       port: 27017
