Disable datasource auto cons when not offline

--- a/participant-microservice/participant-microservice.yml
+++ b/participant-microservice/participant-microservice.yml
@@ -2,6 +2,8 @@ config:
   message: Greetings from the PARTICIPANT microservice [using the BASE config]
 
 spring:
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
   boot:
     admin:
       client:
