--- a/participant-microservice/participant-microservice.yml
+++ b/participant-microservice/participant-microservice.yml
@@ -12,6 +12,9 @@ spring:
         health-url: http://${eureka.instance.hostname}:${management.port}${management.context-path}/health
         management-url: http://${eureka.instance.hostname}:${management.port}${management.context-path}
         service-url: http://${eureka.instance.hostname}:${server.port}${server.context-path}
+  cache:
+    jcache:
+      config: ehcache.xml
   data:
     cassandra:
       keyspace-name: participant
