Add localhost instance.hostname

--- a/facilitated-activity-microservice/facilitated-activity-microservice-local.yml
+++ b/facilitated-activity-microservice/facilitated-activity-microservice-local.yml
@@ -1,6 +1,9 @@
 config:
   message: Greetings from the FACILITATED ACTIVITY microservice [using the LOCAL config]
 
+instance:
+  hostname: localhost
+  
 spring:
   boot:
     admin:
