--- a/admin-server-microservice/admin-server-microservice.yml
+++ b/admin-server-microservice/admin-server-microservice.yml
@@ -4,11 +4,13 @@ config:
 spring:
   boot:
     admin:
-      context-path: /adminServer
       client:
         health-url: http://${instance.hostname}:${management.port}${management.context-path}/health
         management-url: http://${instance.hostname}:${management.port}${management.context-path}
         service-url: http://${instance.hostname}:${server.port}${server.context-path}
+      context-path: /adminServer
+      routes:
+        endpoints: env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,hystrix.stream,turbine.stream,activiti
 
 server:
   port: 13307
