--- a/eureka-server-microservice/eureka-server-microservice.yml
+++ b/eureka-server-microservice/eureka-server-microservice.yml
@@ -4,6 +4,7 @@ config:
 spring:
   boot:
     admin:
+      auto-deregistration: true
       client:
         health-url: http://${eureka.instance.hostname}:${management.port}${management.context-path}/health
         management-url: http://${eureka.instance.hostname}:${management.port}${management.context-path}
