--- a/activities-ui/activities-ui.yml
+++ b/activities-ui/activities-ui.yml
@@ -45,4 +45,13 @@ eureka:
     metadata-map:
       management:
         port: ${management.port} # This is needed by Netflix turbine
+        
+server:
+  session:
+    timeout: 600 # 10 minutes
+
+vaadin:
+  servlet:
+    close-idle-sessions: true # Don't want Vaadin's heart beat signal to keep the session alive
+    heartbeat-interval: 300 # The session timeout should be a multiple of the heartbeat interval
 
