--- a/activities-ui/activities-ui.yml
+++ b/activities-ui/activities-ui.yml
@@ -30,6 +30,7 @@ vaadin:
   servlet:
     close-idle-sessions: true # Don't want Vaadin's heart beat signal to keep the session alive
     heartbeat-interval: 300 # The session timeout should be a multiple of the heartbeat interval
+    productionMode: true
 
 togglz:
   console:
