--- a/microservices-dashboard/microservices-dashboard-test.yml
+++ b/microservices-dashboard/microservices-dashboard-test.yml
@@ -1,9 +1,9 @@
 config:
-  message: Greetings from the HYSTRIX DASHBOARD microservice [using the PRODUCTION config]
+  message: Greetings from the MICROSERVICES DASHBOARD [using the TEST config]
 
 instance:
   hostname: 192.168.1.35
-  
+    
 spring:
   boot:
     admin:
