Comment out auto deregistration for, so we can see when services are offline or down

--- a/activities-ui/activities-ui.yml
+++ b/activities-ui/activities-ui.yml
@@ -4,7 +4,7 @@ config:
 spring:
   boot:
     admin:
-      auto-deregistration: true
+      #auto-deregistration: true
       client:
         health-url: http://${instance.hostname}:${management.port}${management.context-path}/health
         management-url: http://${instance.hostname}:${management.port}${management.context-path}
